# xdl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cargo_debug.toml  LICENSE  PARSER_AND_ARRAY_FIXES.md  README.md  TODO.md  VALIDATION_REPORT.md  VIZ3D_BROWSER_IMPLEMENTATION_SUMMARY.md  VIZ3D_COMPLETE_FINAL.md  VIZ3D_PERFORMANCE_IMPROVEMENTS.md  coverage.lcov  examples_summary.py  generate-coverage.sh  generate_images.py  organize_examples.py  plot_dataframe_simple.py  publish-remaining-crates.sh  run_examples_test.sh  run_slow_tests.sh  sonar-project.properties  test_webgpu.html  test_webgpu_debug.html  visualize_comprehensive.py  visualize_dataframe.py
.cargo/: config.toml
.claude/: settings.local.json
.scannerwork/: report-task.txt
docs/: 3D_PLOTTING_COMPLETE.md  3D_PLOTTING_WITH_GUI.md  ADVANCED_VIZ_INTEGRATION.md  ADVANCED_VIZ_REFERENCE.md  ARRAY_FEATURES.md  ARRAY_GENERATION_FUNCTIONS.md  ARRAY_STATS_FUNCTIONS.md  BEZIER_DEMO_FEATURES.md  BEZIER_IMPLEMENTATION_SUMMARY.md  BUILD_SUCCESS.md  CHARTING_FINAL_STATUS.md  CHARTING_IMPLEMENTATION_STATUS.md  CHARTING_WEBGL_INVESTIGATION.md  CONTROL_FLOW_IMPLEMENTATION.md  DATABASE_MODULE_IMPLEMENTATION.md  DATABASE_QUICK_START.md  DATAFRAMES_REFERENCE.md  DOCUMENTATION_UPDATE_2025.md  ECHARTS_INTEGRATION_COMPLETE.md  EMBEDDING_GUIDE.md  EXPLORATION_SUMMARY.md  FINDGEN_UPDATE.md  FUNCTION_REFERENCE.md  GDL_IDL_COMPATIBILITY.md  GDL_IDL_SYNTAX.md  GDL_XDL_GAP_ANALYSIS.md  GDL_XDL_PORTING_STATUS.md  GEOPHYSICAL_DEMO_GUIDE.md  GIS_SETUP.md  GITHUB_PAGES_SETUP.md  GPU_ACCELERATION_PERFORMANCE_IMPACT.md  GPU_COMPUTE_IMPLEMENTATION.md  GRAPHICS_DEMOS_STATUS.md  GRAPHICS_FIXES_SUMMARY.md  GRAPHICS_IMPLEMENTATION.md  GRAPHICS_QUICK_REF.md  GUI_CONTROL_FLOW_SUPPORT.md  GUI_OUTPUT_FIX.md  IDL_COMMAND_STATUS.md  IMPLEMENTATION_STATUS.md  (+82 more)
examples/: ADVANCED_VIZ_REFERENCE.md  GRAPHICS_DEMOS_STATUS.md  GRAPHICS_QUICK_REF.md  QUICK_START.md  RAYLEIGH_TAYLOR_README.md  README.md  README_VISUALIZATION_SCRIPTS.md  examples_summary.py  generate_images.py  mandelbrot_simple.xdl  ml_conv_pooling_test.xdl  ml_cross_validation_test.xdl  ml_cross_validation_test.xdl.bak2  ml_data_utils.xdl.bak2  ml_kmeans_test.xdl.bak2  ml_new_functions_test.xdl  ml_normalizers_test.xdl  ml_regularization_test.xdl.bak  ml_regularization_test.xdl.bak2  organize_examples.py  plot3d_demo.xdl  plot_dataframe_simple.py  rayleigh_taylor.xdl  (+36 more)
xdl-amp/: Cargo.toml  README.md  build.rs
xdl-amp/examples/: backend_test.rs  basic_ops.rs  gpu_demo.rs  mlx_benchmark.rs  simd_benchmark.rs  verify_cuda.rs  verify_simd.rs
xdl-amp/src/: backend.rs  cache.rs  coreml.rs  cuda.rs  cudnn.rs  directml.rs  directx.rs  dispatch.rs  error.rs  lib.rs  metal.rs  mlx.rs  mps.rs  onnx.rs  opencl.rs  ops.rs  rocm.rs  simd_ops.rs  stats.rs  vulkan.rs
xdl-amp/src/shaders/: metal_kernels.metal  opencl_kernels.cl  vulkan_kernels.comp
xdl-amp/src/shaders/vulkan/: add.comp  cos.comp  div.comp  exp.comp  log.comp  matmul.comp  mul.comp  pow.comp  sin.comp  sqrt.comp  sub.comp
xdl-chart-viewer/: Cargo.toml  create_icon.sh  tauri.conf.json
xdl-chart-viewer/icons/: icon.icns
xdl-chart-viewer/src/: main.rs
xdl-chart-viewer/tests/: chart_viewer_tests.rs
xdl-charts/: Cargo.toml
xdl-charts/src/: echarts.rs  lib.rs  templates.rs
xdl-cli/: Cargo.toml
xdl-cli/src/: main.rs  repl.rs
xdl-cli/tests/: cli_tests.rs
xdl-core/: Cargo.toml
xdl-core/src/: array.rs  dimension.rs  error.rs  lib.rs  types.rs
xdl-database/: Cargo.toml  README.md
xdl-database/examples/: duckdb_analytics.xdl  kafka_streaming_example.xdl  mysql_example.xdl  odbc_sqlserver_example.xdl  postgresql_example.xdl  sqlite_example.xdl
xdl-database/src/: connection.rs  error.rs  lib.rs  recordset.rs
xdl-database/src/drivers/: duckdb.rs  kafka.rs  mod.rs  mysql.rs  odbc.rs  postgres.rs  redis_driver.rs  sqlite.rs
xdl-dataframe/: Cargo.toml  class_centroids.csv  classification_data.csv  department_summary.csv  spatial_3d_data.csv  time_series_output.csv  top_earners.csv
xdl-dataframe/examples/: 3d_visualization_demo.xdl  README.md  charting_demo.xdl  comprehensive_demo.rs  csv_analysis.xdl  database_integration.xdl  dataframe_demo.rs  ml_and_viz_integration.xdl  ml_classification_demo.xdl  parquet_example.xdl  simple_data_analysis.xdl
xdl-dataframe/src/: database.rs  dataframe.rs  error.rs  lib.rs  series.rs
xdl-dataframe/src/readers/: avro.rs  csv.rs  mod.rs  parquet.rs
xdl-desktop-viewer/: Cargo.toml
xdl-desktop-viewer/src/: lib.rs
xdl-ffi/: Cargo.toml
xdl-ffi/src/: embedding.rs  gsl.rs  hdf5.rs  lib.rs  netcdf.rs
xdl-gui/: Cargo.toml
xdl-gui/src/: gui.rs  gui.rs.bak  image_window.rs  main.rs  plot_window.rs
xdl-interpreter/: Cargo.toml
xdl-interpreter/src/: context.rs  evaluator.rs  lib.rs  methods.rs  runtime.rs
xdl-lsp/: Cargo.toml
xdl-lsp/src/: completion.rs  diagnostics.rs  document.rs  goto.rs  hover.rs  main.rs  semantic_tokens.rs  server.rs  symbols.rs  utils.rs
xdl-parser/: Cargo.toml
xdl-parser/src/: ast.rs  error.rs  lexer.rs  lexer_old.rs  lib.rs  parser.rs
xdl-runtime/: Cargo.toml
xdl-runtime/src/: gc.rs  lib.rs  memory.rs
xdl-stdlib/: Cargo.toml
xdl-stdlib/src/: amp.rs  array.rs  charting_procs.rs  charting_procs_broken.rs  complex.rs  data_structures.rs  dialog.rs  gpu_array.rs  graphics_procs.rs  image.rs  image_io.rs  io.rs  lib.rs  linalg.rs  linfa_ml.rs  map.rs  math.rs  matlab_compat.rs  ml.rs  polars_df.rs  python.rs  rustpython_interp.rs  scientific_io.rs  signal.rs  statistics.rs  string.rs  system.rs  viz3d.rs  viz3d_advanced.rs  widget.rs
xdl-stdlib/src/graphics/: colormap.rs  export.rs  gis.rs  mod.rs  plot2d.rs  plot3d.rs  sciviz.rs  state.rs  terrain.rs
xdl-stdlib/tests/: stdlib_tests.rs
xdl-viz3d/: Cargo.toml  README.md
xdl-viz3d-threejs/: Cargo.toml
xdl-viz3d-threejs/src/: colormaps.rs  lib.rs  shaders.rs  templates.rs
xdl-viz3d-web/: Cargo.toml
xdl-viz3d-web/src/: lib.rs  server.rs  template.rs
xdl-viz3d/shaders/: volume_raymarch.wgsl
xdl-viz3d/src/: camera.rs  colormap.rs  lib.rs  renderer.rs  volume.rs
(+473 files in other folders)
