[workspace]
members = [
    "xdl-core",
    "xdl-parser",
    "xdl-interpreter",
    "xdl-runtime",
    "xdl-stdlib",
    "xdl-cli",
    "xdl-ffi",
    "xdl-gui",
    "xdl-viz3d",
    "xdl-viz3d-web",
    "xdl-viz3d-threejs",
    "xdl-charts",
    "xdl-chart-viewer",
    "xdl-amp",
    "xdl-database",
    "xdl-dataframe",
    "xdl-lsp"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["XDL Rust Team"]
license = "GPL-2.0"
description = "Extended Data Language (XDL) - Rust implementation"
homepage = "https://turingworks.github.io/xdl"
repository = "https://github.com/turingworks/xdl"
documentation = "https://turingworks.github.io/xdl"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Parsing
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Numerical computing
ndarray = "0.15"
num-traits = "0.2"
num-complex = "0.4"
nalgebra = "0.32"

# Scientific libraries (FFI wrappers)
netcdf = "0.8"
hdf5 = "0.8"
fftw = "0.8"
# GSL = "7.0"  # TODO: Install GSL system dependency

# Async/concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Graphics and UI
plotters = "0.3"
wgpu = "23.0"
winit = "0.30"
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28"
fltk = "1.4"

# Testing
criterion = "0.5"
proptest = "1.4"

# Python integration (optional - requires Python installation)
pyo3 = { version = "0.27", features = ["auto-initialize"] }

# RustPython - embedded Python interpreter (pure Rust, no C extensions)
rustpython = { version = "0.4", default-features = false }
rustpython-vm = { version = "0.4", default-features = false, features = ["compiler"] }

# Data Science - Polars (faster than Pandas)
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "json", "dtype-full", "describe", "pivot"] }

# Machine Learning - Linfa (scikit-learn equivalent)
linfa = "0.7"
linfa-clustering = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"
linfa-svm = "0.7"
linfa-reduction = "0.7"
linfa-preprocessing = "0.7"
linfa-nn = "0.7"

# Statistics
statrs = "0.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
opt-level = 0
