[package]
name = "xdl-amp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-backend GPU/ML acceleration for XDL"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
bytemuck = "1.14"
lazy_static = "1.5"
wide = "0.7"
matrixmultiply = "0.3"

# Platform-specific GPU backends
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_AI_MachineLearning_DirectML"
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ocl = { version = "0.19", optional = true }

[features]
default = ["mps"]
# Platform-specific features
mps = []  # Metal Performance Shaders (macOS)
coreml = []  # CoreML/ANE (macOS/iOS)
directml = ["windows"]  # DirectML (Windows)
cuda = ["cudarc"]  # NVIDIA CUDA (auto-detects version)
cudnn = ["cuda"]  # NVIDIA cuDNN
rocm = []  # AMD ROCm
opencl = ["ocl"]  # OpenCL
vulkan = ["ash"]  # Vulkan
onnx = ["ort"]  # ONNX Runtime
# Combined features
all-nvidia = ["cuda", "cudnn"]
all-amd = ["rocm", "opencl"]
all-apple = ["mps", "coreml"]
all-windows = ["directml", "cuda"]
all-backends = ["mps", "coreml", "directml", "cuda", "cudnn", "rocm", "opencl", "vulkan", "onnx"]
# CUDA version-specific features (use if auto-detection fails)
cuda-12 = ["cudarc/cuda-12060"]
cuda-11 = ["cudarc/cuda-11080"]

[dependencies.cudarc]
version = "0.12"
optional = true
features = ["std", "f16", "nvrtc", "cuda-version-from-build-system"]

[dependencies.ash]
version = "0.38"
optional = true

[dependencies.ort]
version = "2.0.0-rc.10"
optional = true
default-features = false
features = ["ndarray"]

[dev-dependencies]
criterion = { workspace = true }
