[package]
name = "xdl-charts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }
