[package]
name = "xdl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Extended Data Language (XDL) command-line interface"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "xdl"
path = "src/main.rs"

[dependencies]
xdl-core = { version = "0.1.0", path = "../xdl-core" }
xdl-parser = { version = "0.1.0", path = "../xdl-parser" }
xdl-interpreter = { version = "0.1.0", path = "../xdl-interpreter" }
xdl-stdlib = { version = "0.1.0", path = "../xdl-stdlib" }
xdl-matlab = { version = "0.1.0", path = "../xdl-matlab" }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

# For REPL
rustyline = "13.0"
dirs = "5.0"
serde_json = "1.0"

[features]
default = []
# Python integration via PyO3 (requires system Python)
python = ["xdl-interpreter/python", "xdl-stdlib/python"]
# RustPython - embedded pure Python interpreter (no C extensions like NumPy)
rustpython = ["xdl-interpreter/rustpython", "xdl-stdlib/rustpython"]
