[package]
name = "xdl-dataframe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DataFrame module for XDL - pandas/Spark-style data manipulation with support for CSV, TSV, Parquet, Avro"

[dependencies]
# Core XDL dependencies
xdl-core = { path = "../xdl-core" }
xdl-database = { path = "../xdl-database", optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# CSV/TSV support
csv = "1.3"

# Parquet support
parquet = { version = "53", optional = true }
arrow = { version = "53", optional = true }

# Avro support
apache-avro = { version = "0.17", optional = true }

# Data manipulation
indexmap = "2.0"
ndarray = { workspace = true }

# Statistics and math
num-traits = "0.2"

[features]
default = ["csv-support", "database-integration"]

# Individual format support
csv-support = []
parquet-support = ["parquet", "arrow"]
avro-support = ["apache-avro"]
database-integration = ["xdl-database"]

# Enable all formats
all = [
    "csv-support",
    "parquet-support",
    "avro-support",
    "database-integration"
]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
