[package]
name = "xdl-desktop-viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"
urlencoding = "2.1"
