[package]
name = "xdl-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Foreign Function Interface for XDL external libraries"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
xdl-core = { version = "0.1.1", path = "../xdl-core" }
