[package]
name = "xdl-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GUI application for XDL with integrated CLI and plotting"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "xdl-gui"
path = "src/main.rs"

[dependencies]
xdl-core = { version = "0.1.0", path = "../xdl-core" }
xdl-parser = { version = "0.1.0", path = "../xdl-parser" }
xdl-runtime = { version = "0.1.0", path = "../xdl-runtime" }
xdl-interpreter = { version = "0.1.0", path = "../xdl-interpreter" }
xdl-stdlib = { version = "0.1.0", path = "../xdl-stdlib" }
xdl-matlab = { version = "0.1.0", path = "../xdl-matlab" }
fltk = { workspace = true }
plotters = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = "1.19"
