[package]
name = "xdl-interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "XDL interpreter engine"

[dependencies]
xdl-core = { path = "../xdl-core" }
xdl-parser = { path = "../xdl-parser" }
xdl-stdlib = { path = "../xdl-stdlib" }
xdl-dataframe = { path = "../xdl-dataframe" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }

[features]
default = ["python"]
# Python integration via PyO3 (requires system Python)
python = ["xdl-stdlib/python"]
# RustPython - embedded pure Python interpreter (no C extensions like NumPy)
rustpython = ["xdl-stdlib/rustpython"]
