[package]
name = "xdl-interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "XDL interpreter engine"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
xdl-core = { version = "0.1.0", path = "../xdl-core" }
xdl-parser = { version = "0.1.0", path = "../xdl-parser" }
xdl-stdlib = { version = "0.1.0", path = "../xdl-stdlib" }
xdl-dataframe = { version = "0.1.0", path = "../xdl-dataframe" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }

[features]
default = []
# Python integration via PyO3 (requires system Python)
python = ["xdl-stdlib/python"]
# RustPython - embedded pure Python interpreter (no C extensions like NumPy)
rustpython = ["xdl-stdlib/rustpython"]
