[package]
name = "xdl-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "XDL Language Server Protocol implementation"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "xdl-lsp"
path = "src/main.rs"

[dependencies]
xdl-core = { version = "0.1.1", path = "../xdl-core" }
xdl-parser = { version = "0.1.1", path = "../xdl-parser" }

# LSP framework
tower-lsp = "0.20"
tokio = { workspace = true }

# Async utilities
async-trait = "0.1"

# Data structures
dashmap = "5.5"
ropey = "1.6"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
