[package]
name = "xdl-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "XDL standard library functions"

[dependencies]
xdl-core = { path = "../xdl-core" }
xdl-viz3d = { path = "../xdl-viz3d" }
xdl-viz3d-web = { path = "../xdl-viz3d-web" }
xdl-viz3d-threejs = { path = "../xdl-viz3d-threejs" }
xdl-charts = { path = "../xdl-charts" }
xdl-amp = { path = "../xdl-amp" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }
ndarray = { workspace = true }
plotters = { version = "0.3", features = ["all_series", "chrono", "bitmap_backend", "svg_backend"] }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
pyo3 = { workspace = true, optional = true }
lazy_static = "1.4"
rustfft = "6.1"
nalgebra = "0.32"
regex = "1.10"
libm = "0.2"

# RustPython - embedded Python interpreter (pure Rust)
rustpython = { workspace = true, optional = true }
rustpython-vm = { workspace = true, optional = true }

# Data Science - Polars (Pandas alternative, much faster)
polars = { workspace = true, optional = true }

# Machine Learning - Linfa (scikit-learn equivalent)
linfa = { workspace = true, optional = true }
linfa-clustering = { workspace = true, optional = true }
linfa-linear = { workspace = true, optional = true }
linfa-logistic = { workspace = true, optional = true }
linfa-trees = { workspace = true, optional = true }
linfa-svm = { workspace = true, optional = true }
linfa-reduction = { workspace = true, optional = true }
linfa-preprocessing = { workspace = true, optional = true }
linfa-nn = { workspace = true, optional = true }

# Statistics
statrs = { workspace = true, optional = true }

# GIS and Geospatial (optional - requires PROJ system library)
geo = { version = "0.28", optional = true }
geo-types = { version = "0.7", optional = true }
geojson = { version = "0.24", optional = true }
proj = { version = "0.27", optional = true }
wkt = { version = "0.10", optional = true }

# Scientific Visualization
colorous = "1.0"
palette = "0.7"

# Terrain and Geometry
delaunator = "1.0"

# Scientific Data Formats (optional, feature-gated)
netcdf = { version = "0.9", optional = true }
hdf5 = { version = "0.8", optional = true }

# 3D Rendering
three-d = "0.17"

# GSL = { workspace = true }  # TODO: Install GSL system dependency

[features]
default = ["dataframes", "datascience"]

# Python integration (requires Python installation for C extensions)
python = ["pyo3"]

# RustPython - embedded pure Python interpreter (no C extensions like NumPy/Pandas)
rustpython = ["dep:rustpython", "rustpython-vm"]

# Data Science - Polars DataFrames (faster than Pandas)
dataframes = ["polars"]

# Machine Learning - Linfa (scikit-learn equivalent)
ml = ["linfa", "linfa-clustering", "linfa-linear", "linfa-logistic", "linfa-trees", "linfa-svm", "linfa-reduction", "linfa-preprocessing", "linfa-nn"]

# Statistics
stats = ["statrs"]

# Convenience feature for all data science
datascience = ["dataframes", "stats", "ml"]

# GIS and Geospatial
gis = ["geo", "geo-types", "geojson", "proj", "wkt"]

# Scientific I/O
scientific-io = ["netcdf", "hdf5"]

# GPU acceleration (currently stubbed)nvulkan = []n# GPU acceleration (currently stubbed)ncuda = []nvulkan = []nn# GPU acceleration (currently stubbed)
cuda = []
vulkan = []

# All features
all-features = ["gis", "scientific-io", "python", "rustpython", "datascience"]
