[package]
name = "xdl-viz3d-threejs"
version = "0.1.0"
edition = "2021"
authors = ["XDL Contributors"]
description = "Three.js-based volume rendering for XDL"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdl-core = { path = "../xdl-core" }

[dev-dependencies]
