[package]
name = "xdl-viz3d-threejs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Three.js-based volume rendering for XDL"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdl-core = { version = "0.1.1", path = "../xdl-core" }

[dev-dependencies]
