[package]
name = "xdl-viz3d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-fidelity 3D visualization for scientific simulations using WebGPU"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
xdl-core = { version = "0.1.1", path = "../xdl-core" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
pollster = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }

# For web support
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
